--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,9 +1,17 @@
-body{
+html,
+body {
     width: 100%;
     height: 100%;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     background-color: orangered;
 }
-footer{
+
+.anchor {
+
+}
+header {
+    text-align: center;
+}
+footer {
     text-align: center;
 }
