--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,7 +3,8 @@ body {
     width: 100%;
     height: 100%;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    background-color: orangered;
+    background-color: #021130;
+    color: #fff;
 }
 
 .anchor {
